# jskel

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  clipboard.rs  filter.rs  json.rs  main.rs  skel.rs
src/json/: parser.rs  serializer.rs  value.rs
