[package]
name = "jskel"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Extract JSON structure by stripping values."
license = "MIT"
readme = "README.md"
keywords = ["json", "cli", "schema", "skeleton", "structure"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "jskel"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
